fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1613,6 +1613,9 @@ img {
     padding: 0 0 20px;
   }
   .projects {
+    padding: 0;
+  }
+  .email-projects {
     padding: 2.0em 0;
   }
 }
